[tool.poetry]
name = "bithumbtradekit"
version = "0.1.3"
description = "Bithumb API 2.0 기반 코인 매매 도구"
readme = "README.md"
license = "MIT"
authors = [
    "infinist <infinist7@naver.com>",
]
keywords = ["bithumb", "cryptocurrency", "trading", "api"]
packages = [{include = "bithumbtradekit", from = "src"}]

homepage = "https://github.com/infinist7/bithumbtradekit"
repository = "https://github.com/infinist7/bithumbtradekit"
documentation = "https://github.com/infinist7/bithumbtradekit"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = ">=2.25.0"
pandas = ">=1.3.0"
PyJWT = ">=2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.0"
pytest-cov = ">=2.0"
black = ">=21.0"
flake8 = ">=3.8"
mypy = ">=0.900"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

